# ros_clams

./: CMakeLists.txt  README.md  package.xml
include/core/clams/: discrete_depth_distortion_model.h  slam_calibration_visualizer.h  slam_calibrator.h  trajectory.h  trajectory_visualizer.h
include/core/stream_sequence/: frame_projector.h  stream_sequence.h  stream_sequence_base.h  stream_sequence_pcl_wrapper.h  typedefs.h
include/utility/bag_of_tricks/: agent.h  bag_of_tricks.h
include/utility/eigen_extensions/: eigen_extensions.h
scripts/: slam  visualize_trajectories
src/core/clams/lib/: discrete_depth_distortion_model.cpp  discrete_depth_distortion_model_helpers.cpp  slam_calibrator.cpp  trajectory.cpp  trajectory_visualizer.cpp
src/core/clams/prog/: calibrate.cpp  convert_trajectory.cpp  generate_map.cpp  inspect.cpp  visualize_model.cpp  visualize_trajectory.cpp
src/core/stream_sequence/lib/: frame_projector.cpp  stream_sequence.cpp  stream_sequence_base.cpp  stream_sequence_pcl_wrapper.cpp
src/core/stream_sequence/prog/: sseq_to_freiburg.cpp
src/utility/bag_of_tricks/: high_res_timer.cpp  lockable.cpp
src/utility/eigen_extensions/: cat.cpp  convert.cpp  random.cpp
src/utility/serializable/lib/: serializable.cpp
src/utility/timer/lib/: timer.cpp
